# Decentralized-AI-Inference

./: .api_keys.json  .env.example  .gitignore  .tokens.json  Dockerfile.admin  Dockerfile.provider  README.md  README_PRODUCTION.md  REMOTE_PROVIDER_GUIDE.md  docker-compose.admin.yml  docker-compose.provider.yml  requirements.txt  run_admin.py  run_demo.py  run_stack.py  run_stack_multi.py  start-demo.sh  test-sharding.sh  test_multi_provider.py
admin/: calculator.py  main.py  matcher.py  model_downloader.py  token_store.py
configs/: 15_providers.json  docker-compose-15.yml  test_15_providers.py
coordinator/: distributed.py  distributed_engine.py  fault_tolerant_coordinator.py  main.py  shard_coordinator.py  shard_server.py  streaming_coordinator.py
dicai/: demo.sh  docker-compose.yml
dicai/admin/: go.mod  go.sum
dicai/admin/cmd/: main.go
dicai/admin/pkg/api/: handler.go  handlers.go  types.go
dicai/admin/pkg/blockchain/: simulator.go
dicai/admin/pkg/coordinator/: assignment.go  coordinator.go  health.go  registry.go
dicai/admin/pkg/metrics/: metrics.go
dicai/docker/: Dockerfile.admin  Dockerfile.provider  docker-compose.admin.yml  docker-compose.provider.yml  docker-compose.yml
dicai/proto/: coordination.proto  inference.proto  layer.proto
dicai/provider/cpp/: CMakeLists.txt
dicai/provider/cpp/src/: server.cpp
dicai/provider/rust/: Cargo.toml  build.rs
dicai/provider/rust/src/: main.rs
dicai/scripts/: client.py
docker/: Dockerfile.admin  Dockerfile.provider  docker-compose.yml
proto/: dicai.proto  dicai_pb2.py  dicai_pb2_grpc.py
provider/: client.py  detect.py  grpc_provider.py  launcher.py  pytorch_provider.py  requirements.txt  shard_provider.py
proxy/: main.py
scripts/: health_check.py  setup_provider.sh  start-distributed.sh
shared/: auth.py  constants.py  dicai.proto  dicai_pb2.py  dicai_pb2_grpc.py  distributed_model.py  fault_tolerance.py  grpc_server.py  health_monitor.py  kv_cache.py  models.py  shard_calculator.py  tokenizer.py
src/admin/: layer_server.py
src/api/: server.py
src/coordinator/: main.py
src/dht/: discovery.py
src/inference/: engine.py  session.py
src/memory/: loader.py
src/provider/: main.py
src/web/: admin_service.py
src/web/static/: index.html
tests/: test_grpc.py  test_integration.py  test_production.py
tools/: convert_to_pytorch.py  convert_to_pytorch_v2.py  generate_provider_code.py  generate_provider_config.py  gguf_splitter.py  split_model.py
v2/: ARCHITECTURE_PLAN.md
v2/src/api/: server.py
v2/src/dht/: discovery.py
v2/src/inference/: session.py
v2/src/memory/: loader.py
v2/tests/: test_integration.py
